# sdk-python

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  pyproject.toml.bak  ruff.toml
scripts/: clean.py  clean.sh  setupTurboCache.py
scripts/extract_types/: __init__.py  tsort.py
scripts/helper/: __init__.py  config.py  exec.py
