[tool.poetry]
name = "cypherock-sdk-monorepo"
version = "0.1.0"
description = "python-sdk"
authors = ["Temiloluwa Yusuf <ytemiloluwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pyserial = "^3.5"
semver = "^3.0.0"
hid = "^1.0.8"
pyusb = "^1.2.1"
packaging = "^23.0"
betterproto = "*"
httpx = "^0.24.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-asyncio = "^1.1.0"
hypothesis = "^6.127.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "."
filterwarnings = [
    "ignore::pytest.PytestRemovedIn9Warning",
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning",
    "ignore:.*Task exception was never retrieved.*:RuntimeWarning",
    "ignore:.*coroutine.*was never awaited.*:RuntimeWarning",
] 